# passenger-impact-engine

./: .dockerignore  .gitignore  .redis-url  API_DOCS.md  API_README.md  BUSINESS_README.md  Dockerfile  ENTERPRISE_SETUP.md  Makefile  PRODUCTION_REPORT.md  Procfile  README.md  STRIPE_TEST_GUIDE.md  activate_subscription_testmode.py  add_api_key_hash_properly.py  alembic.ini  api_keys_backup.txt  app.py  artifact-0b763f7b-fb54-47ea-8fde-a0a24a4b7f9f.txt  azure_deploy.sh  azure_deploy_containerapps.sh  azure_schema.sql  backup.sql  backup_20260207.sql  backup_database.sh  bookings.csv  check_after_payment.sh  check_and_fix_models.py  check_auth_issues.py  check_billing_code.py  check_company_model.py  check_invoice_fields.py  check_issues.py  check_models.py  check_postgres_auth.sh  check_project_structure.sh  check_require_company.py  check_stripe_key.py  check_webhook_setup.sh  clean_fix.py  (+123 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 30a7d24e93c0_create_initial_tables.py
backup_20260206_171200/api/: app.py
backup_20260206_171200/pro/: db.py  enterprise_models.py  enterprise_routes.py  queue.py  routes.py  settings.py  worker.py
backup_20260206_171219/api/: app.py
backup_20260206_171219/pro/: db.py  enterprise_models.py  enterprise_routes.py  enterprise_routes.py.backup  queue.py  routes.py  settings.py  worker.py
configs/: api_Final_Test_Airline.yml  api_SkyJet_Airlines.yml  api_client_company_name.yml  api_direct_test.yml  api_enterprise_airline.yml  api_global_airlines.yml  api_large_test.yml  api_medium_test.yml  api_small_test.yml  demo.yml  demo_eu261_realistic.yml
deploy/: Dockerfile  README.md  ci_docker_smoke.sh  client_report.sh  demo.sh  docker-compose.yml  install.sh  refresh.sh  refresh_local.sh  start.sh  worker.sh
deploy/auth/: .htpasswd
docs/: BUYER_PITCH.md  DEMO_OUTPUT.md  MVP_WORKFLOW.md  index.html
docs/dashboard/: index.html
docs/demo/: dashboard.html  stats_groups.csv  stats_top_passengers.csv
docs/demo-real/: index.html  stats.json
k8s/: app.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pie.yaml  secret.template.yaml  secret.yaml  service.yaml
service/: app.py  requirements.txt
site/: index.html
site/demo/: index.html  stats.json
site/demo-real/: stats.json
src/passenger_impact_engine/: cli.py
src/pie/: __init__.py  __main__.py  api.py  cli_cmd.py  config.py  db.py  enterprise_complete.py  main.py  main_backup.py  main_complete.py  (+1 more)
tests/: test_eu261.py
(+65 files in other folders)
