[project]
name = "passenger-impact-engine"
version = "0.1.0"
description = "Passenger Impact Engine (EU261) — Monte Carlo cost exposure + audit-grade event logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saleh Mahamat", email = "salehmahamathisseine@gmail.com" }]
keywords = ["EU261", "airline", "risk", "simulation", "monte-carlo", "compliance", "audit"]
dependencies = [
  "pandas>=2.2",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
pie = "pie.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff]
exclude = [
  "src/pie/api.py",
  "src/pie/api/**",
  "src/pie/config.py",
  "src/pie/db.py",
  "src/pie/models/**",
]
