[project]
name = "passenger-impact-engine"
version = "0.1.0"
description = "Passenger Impact Engine (EU261) — Monte Carlo cost exposure + audit-grade event logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saleh Mahamat", email = "salehmahamathisseine@gmail.com" }]
keywords = ["EU261", "airline", "risk", "simulation", "monte-carlo", "compliance", "audit"]
dependencies = [
  "pandas>=2.2",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[tool.ruff]
# (whatever you already had here, like line-length, select, etc.)

exclude = [
  "src/pie/api.py",
  "src/pie/api/**",
  "src/pie/config.py",
  "src/pie/db.py",
  "src/pie/models/**",
]
