[project]
name = "passenger-impact-engine"
version = "0.1.0"
description = "Passenger Impact Engine (EU261) — Monte Carlo cost exposure + audit-grade event logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Saleh Mahamat", email = "salehmahamathisseine@gmail.com" }]
keywords = ["EU261", "airline", "risk", "simulation", "monte-carlo", "compliance", "audit"]

dependencies = [
  "pandas>=2.2",
  "typer>=0.12",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

pdf = [
  "reportlab>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
